fixed covid banner miss aligning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,12 @@ img {
 
 .covid-text {
     margin-bottom: 0;
+    padding: 8px 16px;
+    max-width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    border: 1px dotted #00897b;
+    border-radius: 4px;
 }
 
 .submit-button {
